[gd_scene load_steps=8 format=3 uid="uid://cs4o6hut8xn3k"]

[ext_resource type="Script" path="res://Platforms/BreakingBlocks/BreakingBlock.gd" id="1_kswhx"]
[ext_resource type="Texture2D" uid="uid://vqi75003q8u1" path="res://Platforms/BreakingBlocks/block.png" id="1_smyfr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfuc0"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uv36v"]
size = Vector2(30, 4)

[sub_resource type="Animation" id="Animation_fxnqt"]
resource_name = "Breaking"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Block:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_smyfr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Block:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 7), Vector2(2, 6)]
}

[sub_resource type="Animation" id="Animation_m30lc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Block:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_smyfr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Block:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqhc5"]
_data = {
"Breaking": SubResource("Animation_fxnqt"),
"RESET": SubResource("Animation_m30lc")
}

[node name="BreakingBlock" type="Node2D"]
script = ExtResource("1_kswhx")

[node name="Block" type="Sprite2D" parent="."]
position = Vector2(2, 6)
texture = ExtResource("1_smyfr")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Colision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_gfuc0")

[node name="Area2D" type="Area2D" parent="."]

[node name="Detector" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -9)
shape = SubResource("RectangleShape2D_uv36v")
debug_color = Color(0.972549, 0, 0, 0.419608)

[node name="DestroyBlock" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RebuildBlock" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bqhc5")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DestroyBlock" to="." method="_on_destroy_block_timeout"]
[connection signal="timeout" from="RebuildBlock" to="." method="_on_rebuild_block_timeout"]
